remove dependency to SemiAffordance

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Language::l33t
 
 {{$NEXT}}
+    - Stop using SemiAffordance accessors. 
 
 1.0.0     2013-03-04
     * conversion to Moose.
