switch to Type::Tiny

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Language::l33t
 {{$NEXT}}
     - Stop using SemiAffordance accessors. 
     - Switch Method::Signatures for bona fide signatures.
+    - Switch to Type::Tiny.
 
 1.0.0     2013-03-04
     * conversion to Moose.
