--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for Language::l33t
     - Stop using SemiAffordance accessors. 
     - Switch Method::Signatures for bona fide signatures.
     - Switch to Type::Tiny.
+    - Switch from Moose to Moo.
 
 1.0.0     2013-03-04
     * conversion to Moose.
