--- a/README
+++ b/README
@@ -1,38 +1,125 @@
-Acme::l33t
+=head1 SYNOPSIS
 
-INSTALLATION
+    use Language::l33t;
 
-To install this module, run the following commands:
+    my $interpreter = Language::l33t->new;
+    $interpreter->set_source( 'Ph34r my l33t sk1llz' );
+    $interpreter->run;
 
-    perl Build.PL
-    ./Build
-    ./Build test
-    ./Build install
+=head1 DESCRIPTION
+
+Language::l33t is a Perl interpreter of the l33t language created by
+Stephen McGreal and Alex Mole. For the specifications of l33t, refer
+to L<Language::l33t::Specifications>.
+
+=head1 METHODS
+
+=head2 new( %options )
+
+Creates a new interpreter. The options that can be passed to the function are:
+
+=over
+
+=item debug => $flag
+
+If $flag is set to true, the interpreter will print debugging information
+as it does its thing.
+
+=item stdin => $io
+
+Ties the stdin of the interpreter to the given object.
+
+=item stdout => $io
+
+Ties the stdout of the interpreter to the given object. 
+
+E.g.:
+
+    my $output;
+    open my $fh_output, '>', \$output;
+
+    my $l33t = Language::l33t->new( stdout => $fh_output );
+
+    $l33t->set_source( $code );
+    $l33t->run;
+
+    print "l33t output: $output";
+
+=item memory_max_size => $bytes
+
+The size of the block of memory available to interpreter. By default set to
+64K (as the specs recomment).
+
+=item byte_size => $size
+
+The size of a byte in the memory used by the interpreter. Defaults to
+256 (so a memory byte can hold a value going from 0 to 255).
 
 
-SUPPORT AND DOCUMENTATION
+=back
 
-After installing, you can find documentation for this module with the perldoc command.
+=head2 source( $l33tcode )
 
-    perldoc Acme::l33t
+Loads and "compiles" the string $l33tcode. If one program was already loaded,
+it is clobbered by the newcomer. 
 
-You can also look for information at:
+=head2 run( [ $nbr_iterations ] )
 
-    Search CPAN
-        http://search.cpan.org/dist/Acme::l33t
+Runs the loaded program. If $nbr_iterations is given, interupts the program
+after this number of iterations even if it hasn't terminated. Returns 0 in
+case the program terminated by evaluating an END, 1 if it finished by reaching
+$nbr_iterations.
 
-    CPAN Request Tracker:
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Acme::l33t
+=head2 reset
 
-    AnnoCPAN, annotated CPAN documentation:
-        http://annocpan.org/dist/Acme::l33t
+Reset the interpreter to its initial setting. Code is
+recompiled, and pointers reset to their initial values. 
 
-    CPAN Ratings:
-        http://cpanratings.perl.org/d/Acme::l33t
+E.g.
 
-COPYRIGHT AND LICENCE
+    my $l33t = Language::l33t->new();
+    $l33t->load( $code );
+    $l33t->run;
 
-Copyright (C) 2006 Yanick Champoux
+    # to run the same code a second time
+    $l33t->reset;
+    $l33t->run;
 
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
+
+=head2 memory
+
+Returns the memory of the interpreter in its current state as an array.
+
+=head1 DIAGNOSTICS
+
+=over
+
+=item F00l! teh c0d3 1s b1g3R th4n teh m3m0ry!!1!
+
+You tried to load a program that is too big to fit in 
+the memory. Note that at compile time, one byte is reserved
+for the memory buffer, so the program's size must be less than
+the memory size minus one byte.
+
+=item Byt3 s1z3 must be at l34st 11, n00b!
+
+The I<byte_size> argument of I<new()> was less than 11. 
+The byte size of an interpreter must be at least 11 (to
+accomodate for the opcodes).
+
+=item L0L!!1!1!! n0 l33t pr0gr4m l04d3d, sUxX0r!
+
+run() called before any program was load()ed.
+
+=back
+
+=head1 SEE ALSO
+
+L<Language::l33t::Specifications>
+
+=head1 THANKS 
+
+It goes without saying, special thanks go 
+to Stephen McGreal and Alex Mole for inventing l33t. 
+They are teh rOxX0rs.
+
